--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -11,7 +11,7 @@ jobs:
     name: OpenTofu Apply for GKE
     runs-on: ubuntu-latest
     env:
-      GOOGLE_APPLICATION_CREDENTIALS: /github/workspace/terraform/gcp-key.json
+      GOOGLE_APPLICATION_CREDENTIALS: ./gcp-key.json
 
     steps:
       - name: Checkout repo
