Install gke-gcloud-auth-plugin

--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -59,6 +59,7 @@ jobs:
 
       - name: Configure docker for artifact repository
         run: |
+          gcloud components install gke-gcloud-auth-plugin
           gcloud auth configure-docker us-central1-docker.pkg.dev
 
       - name: Build and push gpt service Docker image
