--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -33,7 +33,15 @@ jobs:
           GCP_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
         run: |
           echo "${GCP_CREDENTIALS}" > "${GOOGLE_APPLICATION_CREDENTIALS}"
-          gcloud auth activate-service-account --key-file="${GOOGLE_APPLICATION_CREDENTIALS}"
+
+      - name: 'Authenticate to Google Cloud'
+        id: 'auth'
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v3'
 
       - name: OpenTofu Init
         working-directory: terraform/
@@ -59,7 +67,6 @@ jobs:
 
       - name: Configure docker for artifact repository
         run: |
-          gcloud components install gke-gcloud-auth-plugin
           gcloud auth configure-docker us-central1-docker.pkg.dev
 
       - name: Build and push gpt service Docker image
